# react-native-perfetto

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Perfetto.podspec  README.md  package.json  tsconfig.json  turbo.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
.maestro/: capture-app-utilities-trace.yaml  capture-busy-loop-1s.yaml  capture-trace-legacy.yaml  capture-trace.yaml  capture-webview-trace.yaml
android/: CMakeLists.txt  build.gradle
android/src/main/java/com/perfetto/: PerfettoModule.kt  PerfettoNativeCommon.kt  PerfettoPackage.kt
android/src/main/jni/: reactnativeperfetto-jni.cpp
android/src/newarch/java/com/perfetto/: PerfettoModule.kt
android/src/oldarch/java/com/perfetto/: PerfettoModule.kt
cpp/: ReactNativePerfettoTracer.cpp  ReactNativePerfettoTracer.h  tracer_c_api.cpp
cpp/include/rnperfetto/: tracer.h
cpp/tests/: ReactNativePerfettoTracer.test.cpp
docs/: android-api.md  cpp-public-api.md  direct-cpp-api-exposure-plan.md  public-api-overview.md  testing-and-verification.md  ts-api.md  webview-tracing-api.md  webview-wire-protocol.md
example/: README.md  app.json  package.json
example-jsi/: README.md  app.json  package.json
example-jsi/android/app/: build.gradle
example-jsi/android/app/src/main/jni/: CMakeLists.txt  apputilities-installer-jni.cc
example-jsi/android/app/src/main/res/values/: strings.xml
example-jsi/cpp/: AppUtilitiesJSI.cpp  AppUtilitiesJSI.h
example-jsi/ios/: Podfile
example-jsi/ios/PerfettoExample/: AppDelegate.swift  AppUtilitiesInstaller.h  AppUtilitiesInstaller.mm  Info.plist  LaunchScreen.storyboard
example-jsi/ios/PerfettoExample.xcodeproj/: project.pbxproj
example-jsi/ios/PerfettoExample.xcodeproj/xcshareddata/xcschemes/: PerfettoExample.xcscheme
example-jsi/src/: App.tsx  appUtilities.ts
example-legacy/: App.tsx  README.md  app.json  metro.config.js  package.json
example-legacy/__tests__/: App.test.tsx
example-legacy/android/: settings.gradle
example-legacy/android/app/: build.gradle
example-legacy/android/app/src/main/res/values/: strings.xml
example-legacy/ios/: Podfile
example-legacy/ios/PerfettoLegacyExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example-legacy/ios/PerfettoLegacyExample.xcodeproj/: project.pbxproj
example-legacy/ios/PerfettoLegacyExample.xcodeproj/xcshareddata/xcschemes/: PerfettoLegacyExample.xcscheme
example-legacy/ios/PerfettoLegacyExample.xcworkspace/: contents.xcworkspacedata
example-legacy/ios/PerfettoLegacyExampleTests/: PerfettoLegacyExampleTests.m
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/PerfettoExample/: AppDelegate.swift  Info.plist
example/ios/PerfettoExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: Perfetto.h  Perfetto.mm
scripts/: install-maestro.sh  pull-latest-android-trace.sh  pull-latest-ios-trace.sh  run-maestro.sh  test-cpp.sh  vendor-perfetto-sdk.sh  verify-trace-playwright.mjs
src/: NativePerfetto.ts  index.tsx  webviewWireProtocol.ts
tests/ts/: webviewWireProtocol.test.mjs
(+9 files in other folders)
